<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/back_ground_end"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/_22sdp"
        android:src="@drawable/illustration"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/title_end"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/description_end"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_btn"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/refresh_page"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

</LinearLayout>