<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatarCmt"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/layoutCmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@color/back_ground_end"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        app:layout_constraintStart_toEndOf="@id/avatarCmt"
        app:layout_constraintTop_toTopOf="@id/avatarCmt">

        <TextView
            android:id="@+id/tvNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            tools:text="dafnmsdnf,msndkfbdskj" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            tools:text="dsfjksdfjksd" />
    </LinearLayout>
    <ImageView
        android:id="@+id/is_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_badge"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/layoutCmt"
        app:layout_constraintEnd_toEndOf="@id/layoutCmt"
        app:layout_constraintTop_toTopOf="@id/layoutCmt" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_150sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layoutCmt"
        app:layout_constraintTop_toBottomOf="@+id/layoutCmt">

        <ImageView
            android:id="@+id/image_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/tvCreatedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_regular"
            tools:text="2 phút" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/like"
            android:textColor="#26282C" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/answer"
            android:textColor="#26282C" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/reaction" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>